--- a/index.html
+++ b/index.html
@@ -134,12 +134,7 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>I'm an experienced email and web developer with a background in graphic design. Through my experience, I have developed a strong proficiency in HTML, CSS, and various CMS platforms including Wordpress. My work encompasses a wide range of projects, from designing responsive websites optimized for SEO to creating HTML emails for leading brands. Additionally, my associate's degree in Graphic Communications has provided me with a thorough understanding and experience with Adobe Creative Cloud, specifically in Photoshop and Illustrator.
-
-
-
-
-					</p>
+		            <p>I'm an experienced email and web developer with a background in graphic design. Through my experience, I have developed a strong proficiency in HTML, CSS, and various CMS platforms including Wordpress. My work encompasses a wide range of projects, from designing responsive websites optimized for SEO to creating HTML emails for leading brands.</p>
 
 		          </div>
 		        </div>
