--- a/index.html
+++ b/index.html
@@ -169,14 +169,14 @@
     			<div class="col-md-6 col-lg-5 d-flex">
     				<div class="img-about img d-flex align-items-stretch">
     					<div class="overlay"></div>
-	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(Arasaka-Laptop-Hero.png);">
+	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(img/Arasaka-Laptop-Hero.png);">
 	    				</div>
     				</div>
     			</div>
     			<div class="col-md-6 col-lg-7 pl-lg-5 pb-5">
     				<div class="row justify-content-start pb-3">
 		          <div class="col-md-12 heading-section ftco-animate">
-					<h1 class="big">HTML</h1>
+					<h1 class="big">Email</h1>
 		            <h2 class="mb-4">HTML Email</h2>
 		            <p>I'm an experienced email and web developer with a background in graphic design. Through my experience, I have developed a strong proficiency in HTML, CSS, and various CMS platforms including Wordpress. My work encompasses a wide range of projects, from designing responsive websites optimized for SEO to creating HTML emails for leading brands.</p>
 		          </div>
@@ -259,7 +259,7 @@
 			<div class="col-md-6 col-lg-7 pl-lg-5 pb-5">
 				<div class="row justify-content-start pb-3">
 			  <div class="col-md-12 heading-section ftco-animate">
-				<h1 class="big">HTML</h1>
+				<h1 class="big">Email</h1>
 				<h2 class="mb-4">HTML Email</h2>
 				<p>I'm an experienced email and web developer with a background in graphic design. Through my experience, I have developed a strong proficiency in HTML, CSS, and various CMS platforms including Wordpress. My work encompasses a wide range of projects, from designing responsive websites optimized for SEO to creating HTML emails for leading brands.</p>
 			  </div>
