--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 					<h1 class="big">Email</h1>
 		            <h2 class="mb-4">HTML Email</h2>
-		            <p>I'm an experienced email and web developer with a background in graphic design. Through my experience, I have developed a strong proficiency in HTML, CSS, and various CMS platforms including Wordpress. My work encompasses a wide range of projects, from designing responsive websites optimized for SEO to creating HTML emails for leading brands.</p>
+		            <p>This email design is clean and modern, with bold typography and eye-catching imagery to grab the recipient's attention. The email has been optimized for mobile devices, ensuring that recipients could easily view the content on their smartphones and tablets. Through the use of advanced email techniques, this email has been optimized to look great on any device in dark mode.</p>
 		          </div>
 		        </div>
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
@@ -200,7 +200,13 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 					<h1 class="big">Website</h1>
 		            <h2 class="mb-4">Custom Website</h2>
-		            <p>I'm an experienced email and web developer with a background in graphic design. Through my experience, I have developed a strong proficiency in HTML, CSS, and various CMS platforms including Wordpress. My work encompasses a wide range of projects, from designing responsive websites optimized for SEO to creating HTML emails for leading brands.</p>
+		            <p> This site was built for a martial arts studio specializing in judo training.
+
+						To provide an engaging and informative experience for visitors, the Judo Studio website was designed with a clean, modern layout that prioritized usability and functionality. The homepage featured a bold header with clear calls to action, such as signing up for classes or learning more about the studio's instructors and training programs.
+						
+						The Judo Studio website was built using responsive design techniques, allowing it to be easily viewed on desktops, tablets, and smartphones. It was also optimized for search engines, ensuring that the studio's website was easily discoverable by potential customers.
+						
+						Overall, the Judo Studio website was a success, attracting new students and boosting the studio's online presence. I am proud of my work on this project and look forward to creating similarly impactful websites for other clients.</p>
 		          </div>
 		        </div>
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
@@ -238,7 +244,9 @@
 			  <div class="col-md-12 heading-section ftco-animate">
 				<h1 class="big">Email</h1>
 				<h2 class="mb-4">HTML Email</h2>
-				<p>I'm an experienced email and web developer with a background in graphic design. Through my experience, I have developed a strong proficiency in HTML, CSS, and various CMS platforms including Wordpress. My work encompasses a wide range of projects, from designing responsive websites optimized for SEO to creating HTML emails for leading brands.</p>
+				<p>This email was built using HTML and featured a modern, eye-catching design with vibrant images and bold typography. It was also optimized for mobile devices to ensure that the message was easily accessible to all subscribers.
+
+					To encourage engagement and sales, I included prominent call-to-action buttons that linked directly to the store's website.</p>
 			  </div>
 			</div>
 		  <div class="counter-wrap ftco-animate d-flex mt-md-3">
@@ -261,7 +269,9 @@
 			  <div class="col-md-12 heading-section ftco-animate">
 				<h1 class="big">Email</h1>
 				<h2 class="mb-4">HTML Email</h2>
-				<p>I'm an experienced email and web developer with a background in graphic design. Through my experience, I have developed a strong proficiency in HTML, CSS, and various CMS platforms including Wordpress. My work encompasses a wide range of projects, from designing responsive websites optimized for SEO to creating HTML emails for leading brands.</p>
+				<p>This email was built using HTML and featured a modern, eye-catching design with vibrant images and bold typography. It was also optimized for mobile devices to ensure that the message was easily accessible to all subscribers.
+
+					To encourage engagement and sales, I included prominent call-to-action buttons that linked directly to the store's website.</p>
 			  </div>
 			</div>
 		  <div class="counter-wrap ftco-animate d-flex mt-md-3">
