--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 					<h1 class="big">Email</h1>
 		            <h2 class="mb-4">HTML Email</h2>
-		            <p>This email design is clean and modern, with bold typography and eye-catching imagery to grab the recipient's attention. The email has been optimized for mobile devices, ensuring that recipients could easily view the content on their smartphones and tablets. Through the use of advanced email techniques, this email has been optimized to look great on any device in dark mode.</p>
+		            <p>This email design is clean and modern, with bold typography and eye-catching imagery to grab the recipient's attention. The email has been optimized for mobile devices, ensuring that recipients could easily view the content on their smartphones and tablets. Through the use of advanced email techniques, this email has been optimized to look great on any device in both light and dark mode.</p>
 		          </div>
 		        </div>
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
@@ -200,13 +200,7 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 					<h1 class="big">Website</h1>
 		            <h2 class="mb-4">Custom Website</h2>
-		            <p> This site was built for a martial arts studio specializing in judo training.
-
-						To provide an engaging and informative experience for visitors, the Judo Studio website was designed with a clean, modern layout that prioritized usability and functionality. The homepage featured a bold header with clear calls to action, such as signing up for classes or learning more about the studio's instructors and training programs.
-						
-						The Judo Studio website was built using responsive design techniques, allowing it to be easily viewed on desktops, tablets, and smartphones. It was also optimized for search engines, ensuring that the studio's website was easily discoverable by potential customers.
-						
-						Overall, the Judo Studio website was a success, attracting new students and boosting the studio's online presence. I am proud of my work on this project and look forward to creating similarly impactful websites for other clients.</p>
+		            <p> This site features a bold header and was built using responsive design techniques, allowing it to be easily viewed on desktops, tablets, and smartphones. It was also optimized for search engines, ensuring that the studio's website was easily discoverable by potential customers.</p>
 		          </div>
 		        </div>
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
@@ -244,7 +238,7 @@
 			  <div class="col-md-12 heading-section ftco-animate">
 				<h1 class="big">Email</h1>
 				<h2 class="mb-4">HTML Email</h2>
-				<p>This email was built using HTML and featured a modern, eye-catching design with vibrant images and bold typography. It was also optimized for mobile devices to ensure that the message was easily accessible to all subscribers.
+				<p>This email was built as a minimalistic type email. It has been optimized for mobile devices to ensure that the message was easily accessible to all subscribers.
 
 					To encourage engagement and sales, I included prominent call-to-action buttons that linked directly to the store's website.</p>
 			  </div>
@@ -269,9 +263,7 @@
 			  <div class="col-md-12 heading-section ftco-animate">
 				<h1 class="big">Email</h1>
 				<h2 class="mb-4">HTML Email</h2>
-				<p>This email was built using HTML and featured a modern, eye-catching design with vibrant images and bold typography. It was also optimized for mobile devices to ensure that the message was easily accessible to all subscribers.
-
-					To encourage engagement and sales, I included prominent call-to-action buttons that linked directly to the store's website.</p>
+				<p>The email boasts a contemporary and attention-grabbing design, featuring vivid images and striking typography. It has been crafted to be mobile-responsive, ensuring that clients can access and view it seamlessly across all devices and browsers.</p>
 			  </div>
 			</div>
 		  <div class="counter-wrap ftco-animate d-flex mt-md-3">
