--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 			  <div class="col-md-12 heading-section ftco-animate">
 				<h1 class="big">Email</h1>
 				<h2 class="mb-4">HTML Email</h2>
-				<p>The email boasts a contemporary and attention-grabbing design, featuring vivid images and striking typography. It has been crafted to be mobile-responsive, ensuring that clients can access and view it seamlessly across all devices and browsers.</p>
+				<p>This email boasts a contemporary and attention-grabbing design, featuring vivid images and striking typography. It has been crafted to be mobile-responsive, ensuring that clients can access and view it seamlessly across all devices and browsers.</p>
 			  </div>
 			</div>
 		  <div class="counter-wrap ftco-animate d-flex mt-md-3">
