--- a/index.html
+++ b/index.html
@@ -229,35 +229,10 @@
 			<div class="col-md-6 col-lg-5 d-flex">
 				<div class="img-about img d-flex align-items-stretch">
 					<div class="overlay"></div>
-					<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(/img/mmatimesimage.png);">
+					<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(https://felixzavala.com/img/PC_Accessories-.jpg)">
 					</div>
 				</div>
 			</div>
-			<div class="col-md-6 col-lg-7 pl-lg-5 pb-5">
-				<div class="row justify-content-start pb-3">
-			  <div class="col-md-12 heading-section ftco-animate">
-				<h1 class="big">Email</h1>
-				<h2 class="mb-4">HTML Email</h2>
-				<p>This email was built as a minimalistic type email. It has been optimized for mobile devices to ensure that the message was easily accessible to all subscribers.
-
-					To encourage engagement and sales, I included prominent call-to-action buttons that linked directly to the store's website.</p>
-			  </div>
-			</div>
-		  <div class="counter-wrap ftco-animate d-flex mt-md-3">
-		  <div class="text">
-			<p><a href="https://felixzavala.com/emailtemplate3.html" class="btn btn-primary py-3 px-3">See Email</a></p>
-		  </div>
-		  </div>
-		</div>
-	</div>
-	</div>
-</section>
-
-<!--Row 4 : Portfolio-->
-
-<section class="ftco-about img ftco-section ftco-no-pb" id="about-section">
-	<div class="container">
-		<div class="row d-flex">
 			<div class="col-md-6 col-lg-7 pl-lg-5 pb-5">
 				<div class="row justify-content-start pb-3">
 			  <div class="col-md-12 heading-section ftco-animate">
@@ -272,18 +247,10 @@
 		  </div>
 		  </div>
 		</div>
-
-			<div class="col-md-6 col-lg-5 d-flex">
-				<div class="img-about img d-flex align-items-stretch">
-					<div class="overlay"></div>
-					<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(https://felixzavala.com/img/PC_Accessories-.jpg);">
-					</div>
-				</div>
-			</div>
-
 	</div>
 	</div>
 </section>
+
 
     <section class="ftco-section contact-section ftco-no-pb" id="contact-section">
       <div class="container">
