--- a/ArasakaEmail.html
+++ b/ArasakaEmail.html
@@ -411,7 +411,7 @@
 																					<table align="left" border="0" cellpadding="0" cellspacing="0" class="m-float--center" role="presentation" style="" width="">
 																						<tbody>
 																							<tr>
-																								<th align="center" border="0" class="dm-color--34BDDB" style="padding: 0px; padding-left: 10px; text-align: left; width: 100%; mso-line-height-rule: exactly" width="100%"><a border="0" class="dm-color--34BDDB" href="#" target="_blank"><img align="" alt="AltTextHere" border="0" height="" name="Cont_2" src="/right-arrow-(1).png" style="display:block; margin:0px 0px; max-width:24px !important;" width="24" /></a></th>
+																								<th align="center" border="0" class="dm-color--34BDDB" style="padding: 0px; padding-left: 10px; text-align: left; width: 100%; mso-line-height-rule: exactly" width="100%"><a border="0" class="dm-color--34BDDB" href="#" target="_blank"><img align="" alt="AltTextHere" border="0" height="" name="Cont_2" src="https://github.com/JFELIXZAVALA/Felixzavala/blob/gh-pages/img/right-arrow-(1).png" style="display:block; margin:0px 0px; max-width:24px !important;" width="24" /></a></th>
 																							</tr>
 																						</tbody>
 																					</table>
@@ -598,7 +598,7 @@
                                 <table align="left" border="0" cellpadding="0" cellspacing="0" class="m-float--center" role="presentation" style="" width="">
                                     <tbody>
                                         <tr>
-                                            <th align="center" border="0" class="dm-color--34BDDB" style="padding: 0px; padding-left: 10px; text-align: left; width: 100%; mso-line-height-rule: exactly" width="100%"><a border="0" class="dm-color--34BDDB" href="#" target="_blank"><img align="" alt="AltTextHere" border="0" height="" name="Cont_2" src="/right-arrow-(1).png" style="display:block; margin:0px 0px; max-width:24px !important;" width="24" /></a></th>
+                                            <th align="center" border="0" class="dm-color--34BDDB" style="padding: 0px; padding-left: 10px; text-align: left; width: 100%; mso-line-height-rule: exactly" width="100%"><a border="0" class="dm-color--34BDDB" href="#" target="_blank"><img align="" alt="AltTextHere" border="0" height="" name="Cont_2" src="https://github.com/JFELIXZAVALA/Felixzavala/blob/gh-pages/img/right-arrow-(1).png" style="display:block; margin:0px 0px; max-width:24px !important;" width="24" /></a></th>
                                         </tr>
                                     </tbody>
                                 </table>
