--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 		          	<div class="text">
 		          		<span class="subheading">Hola!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Felix Zavala</span></h1>
-			            <h2 class="mb-4">A Freelance Web and Email Developer</h2>
-			            <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+			            <h2 class="mb-4">A Web and Email Developer</h2>
+			            <p><a href="mailto:jfelixzavala10@gmail.com" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#portfolio-section" class="btn btn-white btn-outline-white py-3 px-4">My Portfolio</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -78,7 +78,7 @@
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm based in <span>Dallas, Texas</span> </h1>
-			            <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+			            <p><a href="mailto:jfelixzavala10@gmail.com" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#portfolio-section" class="btn btn-white btn-outline-white py-3 px-4">My Portfolio</a></p>
 		            </div>
 		          </div>
 	        	</div>
