--- a/ArasakaEmail.html
+++ b/ArasakaEmail.html
@@ -256,7 +256,7 @@
                                                 <table class="m-width--100p m-float--center" width="100%" align="center" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%; margin: 0px auto;">
                                                     <tr>
                                                      <!-- logo -->
-                                                        <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 15px;mso-line-height-rule: exactly;"><a href="#" target="_blank" style="" name="Header_LogoName_image" alias="Header_LogoName_image"><img class="m-width--100p" src="https://felixzavala.com/img/Arasaka-Text-Logo.png" border="0" style="display:block; margin:0px auto; max-width:200px !important;" width="200" height="" alt="Arasaka-Text-Logo"></a>
+                                                        <th class="" width="100%" align="left" border="0" style="width: 100%; padding: 15px;mso-line-height-rule: exactly;"><a href="#" target="_blank" style="" name="Header_LogoName_image" alias="Header_LogoName_image"><img class="m-width--100p" src="https://felixzavala.com/img/Arasaka-Text-Logo.png" border="0" style="display:block; max-width:200px !important;" width="190" height="" alt="Arasaka-Text-Logo"></a>
                                                         </th>
                                                     </tr>
                                                 </table>
