--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     			<div class="col-md-6 col-lg-5 d-flex">
     				<div class="img-about img d-flex align-items-stretch">
     					<div class="overlay"></div>
-	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(img/Arasaka-Laptop-Hero.png);">
+	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(img/ChatGPT560x400.jpg);">
 	    				</div>
     				</div>
     			</div>
