--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     			<div class="col-md-6 col-lg-5 d-flex">
     				<div class="img-about img d-flex align-items-stretch">
     					<div class="overlay"></div>
-	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(img/ChatGPT560x400.jpg);">
+	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(https://raw.githubusercontent.com/JFELIXZAVALA/Felixzavala/gh-pages/img/ChatGPT560x400.jpg);">
 	    				</div>
     				</div>
     			</div>
@@ -244,7 +244,7 @@
 			</div>
 		  <div class="counter-wrap ftco-animate d-flex mt-md-3">
 		  <div class="text">
-			<p><a href="https://felixzavala.com/emailtemp2.html" class="btn btn-primary py-3 px-3">See Email</a></p>
+			<p><a href="https://felixzavala.com/emailtemp2.html" class="btn btn-primary py-3 px-3" style="color: white;">See Email</a></p>
 		  </div>
 		  </div>
 		</div>
