--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 					<h1 class="big">Email</h1>
 		            <h2 class="mb-4">HTML Email</h2>
-		            <p>This email design is clean and modern, with bold typography and eye-catching imagery to grab the recipient's attention. The email has been optimized for mobile devices, ensuring that recipients could easily view the content on their smartphones and tablets. Through the use of advanced email techniques, this email has been optimized to look great on any device in both light and dark mode.</p>
+		            <p>This email design is clean and modern, with bold typography and eye-catching imagery to grab the recipient's attention. The email has been optimized for mobile devices, ensuring that recipients could easily view the content on their smartphones and tablets. Through the use of advanced email techniques, this email has been optimized to look great on any device.</p>
 		          </div>
 		        </div>
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
