--- a/HopeNewsletter.html
+++ b/HopeNewsletter.html
@@ -245,7 +245,7 @@
                                     <table class="m-width--100p m-float--center" width="100%" align="center" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%; margin: 0px auto;">
                                         <tr>
                                          <!-- logo -->
-                                            <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="#" target="_blank" style="" name="Header_LogoName_image" alias="Header_LogoName_image"><img class="m-width--100p" src="HouseofHope.png" border="0" style="display:block; margin:0px auto; max-width:400px !important;" width="260" height="" alt="AltTextHere"></a>
+                                            <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="#" target="_blank" style="" name="Header_LogoName_image" alias="Header_LogoName_image"><img class="m-width--100p" src="img/HouseofHope.png" border="0" style="display:block; margin:0px auto; max-width:400px !important;" width="260" height="" alt="AltTextHere"></a>
                                             </th>
                                         </tr>
                                     </table>
@@ -274,7 +274,7 @@
                                                     <table class="m-width--100p m-float--center" width="100%" align="center" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%; margin: 0px auto;">
                                                         <tr>
                                                             <!-- image -->
-                                                            <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="#" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="Hope-Hero.jpg" border="0" style="display:block; margin:0px auto; max-width:640px !important;" width="640" height="" alt="Smiling children living in poverty."></a>
+                                                            <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="#" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="img/Hope-Hero.jpg" border="0" style="display:block; margin:0px auto; max-width:640px !important;" width="640" height="" alt="Smiling children living in poverty."></a>
                                                             </th>
                                                         </tr>
                                                     </table>
@@ -319,7 +319,7 @@
                                 <table class="m-float--center" width="" align="left" border="0" cellpadding="0" cellspacing="0" role="presentation" style="">
                                     <tr>
                                         <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;">
-                                            <p class="m-text--link" style="font-family: 'Roboto', Arial, sans-serif; font-size: 14px; font-weight: bold; font-weight: 700; color: #34BBDB; mso-line-height-alt: 21px; line-height: 1.5; letter-spacing: normal; text-align: center; border-bottom: 2px solid #34BBDB;"><a class="" href="https://www.whereoware.com" target="_blank" style="font-family: 'Roboto', Arial, sans-serif; color: #34BBDB; text-decoration: none;" name="LinkName_link" alias="LinkName_link">LEARN HOW YOU CAN MAKE A DIFFERENCE</a></p>
+                                            <p class="m-text--link" style="font-family: 'Roboto', Arial, sans-serif; font-size: 14px; font-weight: bold; font-weight: 700; color: #34BBDB; mso-line-height-alt: 21px; line-height: 1.5; letter-spacing: normal; text-align: center; border-bottom: 2px solid #34BBDB;"><a class="" href="#" target="_blank" style="font-family: 'Roboto', Arial, sans-serif; color: #34BBDB; text-decoration: none;" name="LinkName_link" alias="LinkName_link">LEARN HOW YOU CAN MAKE A DIFFERENCE</a></p>
                                         </th>
                                     </tr>
                                 </table>
@@ -374,7 +374,7 @@
                                             <table class="m-width--100p m-float--center" width="100%" align="center" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%; margin: 0px auto;">
                                                 <!-- image -->
                                                 <tr>
-                                                    <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="#" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="Scurve2.jpg" border="0" style="display:block; margin:0px auto; max-width:400px !important;" width="200" height="" alt="2023 GFL Industry Achievement Award"></a>
+                                                    <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="#" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="img/Scurve2.jpg" border="0" style="display:block; margin:0px auto; max-width:400px !important;" width="200" height="" alt="2023 GFL Industry Achievement Award"></a>
                                                     </th>
                                                 </tr>
                                             </table>
@@ -504,17 +504,13 @@
                     <table class="m-float--center" width="" align="center" role="presentation" border="0" cellpadding="0" cellspacing="0" style="margin: 0px auto;">
                         <tr>
                             <!-- col 1 -->
-                            <th class="" width="32" align="center" border="0" style="width: 32px; padding: 0px; mso-line-height-rule: exactly;"><a href="#" target="_blank" style="" name="Footer_SocialName_image" alias="Footer_SocialName_image"><img class="m-width--100p" src="http://contentz.mkt51.net/lp/10613/820691/facebook%20(2).png" border="0" style="display:block; margin:0px auto; max-width:36px !important;" width="36" height="" alt="Facebook Logo"></a>
+                            <th class="" width="32" align="center" border="0" style="width: 32px; padding: 0px; mso-line-height-rule: exactly;"><a href="#" target="_blank" style="" name="Footer_SocialName_image" alias="Footer_SocialName_image"><img class="m-width--100p" src="https://felixzavala.com/img/FB-Black-Circle-Logo-WhiteBG.png" border="0" style="display:block; margin:0px auto; max-width:36px !important;" width="36" height="" alt="Facebook Logo"></a>
                             </th>
-                            <!-- spacer -->
-                            <th class="" width="24" align="center" border="0" style="width:24px; padding:0px 0px 0px 0px; text-align:center; vertical-align: top;">&nbsp;</th>
-                            <!-- col 2 -->
-                            <th class="" width="32" align="center" border="0" style="width: 32px; padding: 0px; mso-line-height-rule: exactly;"><a href="#" target="_blank" style="" name="Footer_SocialName_image" alias="Footer_SocialName_image"><img class="m-width--100p" src="http://contentz.mkt51.net/lp/10613/820691/instagram.png" border="0" style="display:block; margin:0px auto; max-width:32px !important;" width="32" height="" alt="Instagram Logo"></a>
-                            </th>
+                          
                             <!-- spacer -->
                             <th class="" width="30" align="center" border="0" style="width:30px; padding:0px 0px 0px 0px; text-align:center; vertical-align: top;">&nbsp;</th>
                             <!-- col 3 -->
-                            <th class="" width="32" align="center" border="0" style="width: 32px; padding: 0px; mso-line-height-rule: exactly;"><a href="#" target="_blank" style="" name="Footer_SocialName_image" alias="Footer_SocialName_image"><img class="m-width--100p" src="http://contentz.mkt51.net/lp/10613/820691/linkedin%20(4)_0.png" border="0" style="display:block; margin:0px auto; max-width:32px !important;" width="32" height="" alt="LinkedIn Logo"></a>
+                            <th class="" width="32" align="center" border="0" style="width: 32px; padding: 0px; mso-line-height-rule: exactly;"><a href="#" target="_blank" style="" name="Footer_SocialName_image" alias="Footer_SocialName_image"><img class="m-width--100p" src="https://felixzavala.com/img/Twitter-Black-Circle-Logo-WhiteBG.png" border="0" style="display:block; margin:0px auto; max-width:36px !important;" width="36" height="" alt="Twitter Logo"></a>
                             </th>
                         </tr>
                     </table>
