--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Portfolio</h1>
             <h2>Portfolio</h2>
+            <p>My HTML email designs feature a fluid layout using media queries and hybrid coding for optimal responsiveness. I leveraged SVGs and dark mode compatibility techniques to ensure visually appealing and adaptable content. Additionally, I employed bulletproof button designs with VML and modern CSS for consistent interactivity across various email clients. These technical strategies ensure a seamless and engaging user experience for all recipients, regardless of their device or email preferences.</p>
         
           </div>
         </div>
@@ -177,9 +178,9 @@
     			<div class="col-md-6 col-lg-7 pl-lg-5 pb-5">
     				<div class="row justify-content-start pb-3">
 		          <div class="col-md-12 heading-section ftco-animate">
-					<h1 class="big">Email</h1>
-		            <h2 class="mb-4">HTML Email</h2>
-		            <p>This email design is clean and modern, with bold typography and eye-catching imagery to grab the recipient's attention. The email has been optimized for mobile devices, ensuring that recipients could easily view the content on their smartphones and tablets. Through the use of advanced email techniques, this email has been optimized to look great on any device.</p>
+					<h1 class="big">Announcement</h1>
+		            <h2 class="mb-4">Announcement Email</h2>
+		            <p></p>
 		          </div>
 		        </div>
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
@@ -199,14 +200,14 @@
 				<div class="col-md-6 col-lg-7 pl-lg-5 pb-5">
     				<div class="row justify-content-start pb-3">
 		          <div class="col-md-12 heading-section ftco-animate">
-					<h1 class="big">Website</h1>
-		            <h2 class="mb-4">Custom Website</h2>
-		            <p> This site features a bold header and was built using responsive design techniques, allowing it to be easily viewed on desktops, tablets, and smartphones. It was also optimized for search engines, ensuring that the studio's website was easily discoverable by potential customers.</p>
+					<h1 class="big">Newsletter</h1>
+		            <h2 class="mb-4">Email Newsletter</h2>
+		            <p></p>
 		          </div>
 		        </div>
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
-                <p><a href="https://felixzavala.com/judostudio/index.html" class="btn btn-primary py-3 px-3">See Website</a></p>
+                <p><a href="HopeNewsletter.html" class="btn btn-primary py-3 px-3">See Email</a></p>
               </div>
 	          </div>
 	        </div>
@@ -214,7 +215,7 @@
     			<div class="col-md-6 col-lg-5 d-flex">
     				<div class="img-about img d-flex align-items-stretch">
     					<div class="overlay"></div>
-	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(img/judostudio-screenshot.png);">
+	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(img/Hope-Hero.jpg);">
 	    				</div>
     				</div>
     			</div>
@@ -237,9 +238,9 @@
 			<div class="col-md-6 col-lg-7 pl-lg-5 pb-5">
 				<div class="row justify-content-start pb-3">
 			  <div class="col-md-12 heading-section ftco-animate">
-				<h1 class="big">Email</h1>
-				<h2 class="mb-4">HTML Email</h2>
-				<p>This email boasts a contemporary and attention-grabbing design, featuring vivid images and striking typography. It has been crafted to be mobile-responsive, ensuring that clients can access and view it seamlessly across all devices and browsers.</p>
+				<h1 class="big">Promotional</h1>
+				<h2 class="mb-4">Promotional Email</h2>
+				<p></p>
 			  </div>
 			</div>
 		  <div class="counter-wrap ftco-animate d-flex mt-md-3">
