--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Portfolio</h1>
             <h2>Portfolio</h2>
-            <p>My HTML email designs feature a fluid layout using media queries and hybrid coding for optimal responsiveness. I leveraged SVGs and dark mode compatibility techniques to ensure visually appealing and adaptable content. Additionally, I employed bulletproof button designs with VML and modern CSS for consistent interactivity across various email clients. These technical strategies ensure a seamless and engaging user experience for all recipients, regardless of their device or email preferences.</p>
+            <p>My HTML email designs feature a fluid layout using media queries and hybrid coding for optimal responsiveness. Additionally, I employed bulletproof button designs with VML and modern CSS for consistent interactivity across various email clients. These technical strategies ensure a seamless and engaging user experience for all recipients, regardless of their device or email preferences.</p>
         
           </div>
         </div>
@@ -180,12 +180,13 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 					<h1 class="big">Announcement</h1>
 		            <h2 class="mb-4">Announcement Email</h2>
-		            <p></p>
+		            <p>Announcement emails convey vital business developments to subscribers, such as organizational changes, new policies, upcoming products, or campaigns. They are concise, generating customer interest in your brand.
+                    </p>
 		          </div>
 		        </div>
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
-                <p><a href="https://felixzavala.com/ArasakaEmail.html" class="btn btn-primary py-3 px-3">See Email</a></p>
+                <p><a href="https://felixzavala.com/ArasakaEmail.html" class="btn btn-primary py-2 px-5">See Email</a></p>
               </div>
 	          </div>
 	        </div>
@@ -202,12 +203,12 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 					<h1 class="big">Newsletter</h1>
 		            <h2 class="mb-4">Email Newsletter</h2>
-		            <p></p>
+		            <p>Newsletter emails strengthen your bond with subscribers by sharing updates about your company, products, and topics relevant to your audience. They reinforce trust and complement your goods or services.</p>
 		          </div>
 		        </div>
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
-                <p><a href="HopeNewsletter.html" class="btn btn-primary py-3 px-3">See Email</a></p>
+                <p><a href="HopeNewsletter.html" class="btn btn-primary py-2 px-5">See Email</a></p>
               </div>
 	          </div>
 	        </div>
@@ -240,12 +241,13 @@
 			  <div class="col-md-12 heading-section ftco-animate">
 				<h1 class="big">Promotional</h1>
 				<h2 class="mb-4">Promotional Email</h2>
-				<p></p>
+				<p>Promotional emails, inform subscribers about discounts, limited-time promotions, and deals from your company. Their main goal is to swiftly convert email leads into purchases.
+                </p>
 			  </div>
 			</div>
 		  <div class="counter-wrap ftco-animate d-flex mt-md-3">
 		  <div class="text">
-			<p><a href="https://felixzavala.com/emailtemp2.html" class="btn btn-primary py-3 px-3" style="color: white;">See Email</a></p>
+			<p><a href="https://felixzavala.com/emailtemp2.html" class="btn btn-primary py-2 px-5" style="color: white;">See Email</a></p>
 		  </div>
 		  </div>
 		</div>
